The labels in the MainActivity page have an onClickListener set so when the labels are clicked, a webview is opened within the application. 3 webview java and layout pages were created for the muscles camera view only. The other main camera views (Bones and Ligamaments) need webview java and layout pages created. Specific urls have to be put in as well for each label. The same has now been appiaed with the bones camera view regarding labels and webviews and also a 3D bones model has been put in place.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,3 +43,14 @@ sceneform.asset('sampledata/hand.obj',
         'default',
         'sampledata/hand.sfa',
         'src/main/res/raw/hand')
+
+sceneform.asset('sampledata/right_hand.obj',
+        'default',
+        'sampledata/right_hand.sfa',
+        'src/main/res/raw/right_hand')
+
+
+sceneform.asset('sampledata/blue_bones.obj',
+        'default',
+        'sampledata/blue_bones.sfa',
+        'src/main/res/raw/blue_bones')
