Implemeneted Firebase Analytics on the main camera view pages (Muscle, Bones, Ligaments) and Login activity, refactored the name of the 'MainActivity' page to Muscle and refactord the vairable name and textview from 'planetInforcard' to Index.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
         <activity android:name=".webview_m1" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginAcitivity" />
-        <activity android:name=".ligaments" />
-        <activity android:name=".bones" />
+        <activity android:name=".Ligaments" />
+        <activity android:name=".Bones" />
         <activity android:name=".MenuApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,7 +44,7 @@
             android:name="com.google.ar.core"
             android:value="required" />
 
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Muscle" />
     </application>
 
 </manifest>
