Added an accounts page to the main toolbar the user can access accounts page from the menu, also set up the accounts page with a toolbar giving the user an option to either go back to the menu page or logout. Removed the logout method from the menu toolbar, so now the user has to access the accounts page to logout of the application.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".webview_L3"></activity>
+        <activity android:name=".accountSetup"></activity>
+        <activity android:name=".webview_L3" />
         <activity android:name=".webview_L2" />
         <activity android:name=".webview_L1" />
         <activity android:name=".webview_b3" />
