Added an accounts page to the main toolbar the user can access accounts page from the menu, also set up the accounts page with a toolbar giving the user an option to either go back to the menu page or logout. Removed the logout method from the menu toolbar, so now the user has to access the accounts page to logout of the application. Added further infomation fields for the user to fill out, this would be their name, school and year, these fields once filled can be saved to the firebase firestore database. Also once a user creates an account they are directed to the accounts page to fill in the school, name and year fields.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,21 +31,23 @@
         <activity android:name=".webview_m1" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginAcitivity" />
-        <activity android:name=".Ligaments" />
-        <activity android:name=".Bones" />
+        <activity android:name=".Ligaments" android:parentActivityName=".MenuApp"/>
+        <activity android:name=".Bones" android:parentActivityName=".MenuApp"/>
         <activity android:name=".MenuApp">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
 
-        <activity android:name=".Muscle" />
+        <activity android:name=".Muscle" android:parentActivityName=".MenuApp"/>
     </application>
 
 </manifest>
