Added tool bars in each camera view and also created two ARNode pages (ARNodeB, ARNodeL), these are called seperately by the bones and ligaments classes, this is to stop the same model being called cause the same node is being called eveytime a new camera view is selected from the Menu page. The progress bar on the Login page has been fixed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginAcitivity" />
         <activity android:name=".Ligaments" android:parentActivityName=".MenuApp"/>
-        <activity android:name=".Bones" android:parentActivityName=".MenuApp"/>
+        <activity android:name=".Bones" android:parentActivityName=".MenuApp"></activity>
         <activity android:name=".MenuApp">
 
             <intent-filter>
