Added a few design changes, changed background of sliders a little, adjusted the button with on each page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
 
 
 
+
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
@@ -70,7 +71,14 @@
 
         <activity
             android:name=".Muscle"
-            android:parentActivityName=".MenuApp" />
+            android:parentActivityName=".MenuApp">
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MenuApp"
+            ></meta-data>
+
+            </activity>
     </application>
 
 </manifest>
